@@ -151,8 +151,8 @@ module Padrino
       # Removes the specified class and constant.
       #
       def remove_constant(const)
-        return if Padrino::Reloader.exclude_constants.any? { |base| (const.to_s =~ %r{^#{base}}) } &&
-                 !Padrino::Reloader.include_constants.any? { |base| (const.to_s =~ %r{^#{base}}) }
+        return if Padrino::Reloader.exclude_constants.any? { |base| (const.to_s =~ %r{^#{Regex.excape(base)}}) } &&
+                 !Padrino::Reloader.include_constants.any? { |base| (const.to_s =~ %r{^#{Regex.excape(base)}}) }
         begin
           parts  = const.to_s.split("::")
           base   = parts.size == 1 ? Object : parts[0..-2].join("::").constantize
@@ -181,7 +181,7 @@ module Padrino
           files  = files | Padrino.mounted_apps.map { |app| app.app_obj.dependencies  }.flatten
           files.uniq.map { |file|
             file = File.expand_path(file)
-            next if Padrino::Reloader.exclude.any? { |base| file =~ %r{^#{base}} } || !File.exist?(file)
+            next if Padrino::Reloader.exclude.any? { |base| file =~ %r{^#{Regex.excape(base)}} } || !File.exist?(file)
             yield(file, File.mtime(file))
           }.compact
         end
